Feat: Cancelar eventos
